Details
-
Bug
-
Resolution: Fixed
-
Critical
-
69,410
Description
https://build.reactos.org/builders/Test%20VBox/builds/2547/steps/test/logs/stdio
Running Wine Test, Module: wbemdisp, Test: wbemdisp
|
(dll/win32/kernel32/client/loader.c:384) LoadLibraryExW(dxtn) failing with status c0000135
|
(dll/win32/kernel32/client/loader.c:384) LoadLibraryExW(libtxc_dxtn.so) failing with status c0000135
|
(dll/win32/kernel32/client/loader.c:384) LoadLibraryExW(libtxc_dxtn_s2tc.so.0) failing with status c0000135
|
fixme:(dll/directx/wine/wined3d/dxtn.c:484) Wine cannot find the txc_dxtn library, DXTn software support unavailable.
|
(drivers/storage/scsiport/scsiport.c:2895) unknown ioctl code: 0x700A0
|
|
|
*** Assertion failed: DeviceQueue->Busy
|
*** Source File: /srv/buildbot/Build_GCCLin_x86/build/ntoskrnl/ke/devqueue.c, line 164
|
|
|
Break repeatedly, break Once, Ignore, terminate Process or terminate Thread (boipt)?
|
kdb:>
|
o
|
Execute '.cxr F6E5A6B4' to dump context
|
[7h
|
Entered debugger on embedded INT3 at 0x0008:0x80949382.
|
kdb:>
|
bt
|
Eip:
|
<NTOSKRNL.EXE:149383 (:0 (DbgBreakPoint))>
|
Frames:
|
<NTOSKRNL.EXE:8cc1c (ntoskrnl/ke/devqueue.c:164 (KeRemoveDeviceQueue))>
|
<NTOSKRNL.EXE:5f26f (ntoskrnl/io/iomgr/device.c:535 (IopStartNextPacket))>
|
<NTOSKRNL.EXE:60495 (ntoskrnl/io/iomgr/device.c:1611 (IoStartNextPacket))>
|
<cdrom.sys:3523 (drivers/storage/class/cdrom/cdrom.c:5059 (CdRomDeviceControl))>
|
<class2.sys:126f>
|
<NTOSKRNL.EXE:749e1 (ntoskrnl/io/iomgr/irp.c:1221 (IofCallDriver))>
|
<cdfs.sys:1c06 (drivers/filesystems/cdfs/devctrl.c:65 (CdfsDeviceControl))>
|
<cdfs.sys:2db7 (drivers/filesystems/cdfs/dispatch.c:96 (CdfsDispatch))>
|
<cdfs.sys:2fcb (drivers/filesystems/cdfs/dispatch.c:186 (CdfsFsdDispatch))>
|
<NTOSKRNL.EXE:749e1 (ntoskrnl/io/iomgr/irp.c:1221 (IofCallDriver))>
|
<NTOSKRNL.EXE:6befb (ntoskrnl/io/iomgr/iofunc.c:136 (IopPerformSynchronousRequest))>
|
<NTOSKRNL.EXE:6c970 (ntoskrnl/io/iomgr/iofunc.c:612 (IopDeviceFsIoControl))>
|
<NTOSKRNL.EXE:6d7c3 (ntoskrnl/io/iomgr/iofunc.c:1277 (NtDeviceIoControlFile))>
|
<NTOSKRNL.EXE:132e14 (ntoskrnl/include/internal/i386/ke.h:706 (KiSystemServiceHandler))>
|
<NTOSKRNL.EXE:3da5 (:0 (KiFastCallEntry))>
|
<ntdll.dll:c7ed>
|
<wbemprox.dll:1269>
|
<wbemprox.dll:5509>
|
<wbemprox.dll:b475>
|
<wbemprox.dll:b6d9>--- Press q to abort, any other key to continue ---
|
|
|
|
|
<wbemprox.dll:ffce>
|
<wbemprox.dll:107d2>
|
<wbemprox.dll:10937>
|
<wbemdisp.dll:2a59>
|
<wbemdisp.dll:5edf>
|
<wbemdisp_winetest.exe:1102>
|
<wbemdisp_winetest.exe:205e>
|
<wbemdisp_winetest.exe:2a95>
|
<wbemdisp_winetest.exe:2efa>
|
<wbemdisp_winetest.exe:2f5c>
|
<kernel32.dll:fc12>
|
<00000000>
|
kdb:>
|
cc heis spiter